[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "graph-ricci-curvature"
version = "0.1.0"
authors = [
  { name="Brian Andrews", email="b9andrews@gmail.com" },
]
description = "Calculate Ricci Curvature of a Graph"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    'networkx==3.3',
    'POT==0.9.3',
    'numpy==1.23',
    'scipy==1.12'
]

[project.urls]
Homepage = "https://github.com/andrewsb8/graph-ricci-curvature"
